Began work on 'Meet the Team' page

--- a/page-one.html
+++ b/page-one.html
@@ -15,10 +15,10 @@
 
     </head>
     <body>
-        <header class="home-header">
-            <div class="home-header__upper-triangle"></div>
-            <div class="home-header__lower-triangle"></div>
-            <div class="home-header__text-box">
+        <header class="page-header page-header__large">
+            <div class="page-header__upper-triangle page-header__upper-triangle--red"></div>
+            <div class="page-header__lower-triangle page-header__lower-triangle--red"></div>
+            <div class="page-header__text-box page-header__text-box--first-page">
                 <h1 class="primary-header">
                     <span class="primary-header--main">Triangle Academic Coach</span>
                     <hr class="horizontal-hr horizontal-hr--thick" />
@@ -29,7 +29,7 @@
         <section class="page-one">
             <div class="page-one__round-portrait">
             </div>
-            <div class="flex-container--inline flex-container--col">
+            <article class="flex-container--inline flex-container--col main-article">
                 <h1 class="main-heading">
                     <i class="icon-basic-elaboration-message-plus main-heading__icon"></i> 
                     <span class="main-heading__text">From the Desk of David Pérez</span>
@@ -54,7 +54,7 @@
                         academically. In reality, most students are primed to achieve desired ACT/SAT test scores Sophomore year.   
                     </p>
                 </div>
-            </div>
+            </article>
         </section>
         <section class="aside aside--short aside--dark-yellow">
             <h2 class="secondary-header">
@@ -123,7 +123,7 @@
         
 
         <footer class="page-footer">
-            <div class="bottom-border"></div>
+            <div class="bottom-border bottom-border--red"></div>
         </footer>
     </body>
 </html>
