updated Meet the Team page w/ new coaches

--- a/page-five.html
+++ b/page-five.html
@@ -25,7 +25,7 @@
         </header>
         
         <main class="grid grid--fullpage grid--three-by-two">
-            <div class="grid-el grid-el--david">
+            <div class="grid-el grid-el--first">
             </div>
             <div class="grid-el grid-el--second">
                 <div class="grid-el__label grid-el__label--left">
@@ -62,8 +62,8 @@
                     writing, science, and math courses throughout college and beyond. 
                 </div>
             </div>
-            <div class="grid-el grid-el--chance"></div>
-            <div class="grid-el grid-el--dan"></div>
+            <div class="grid-el grid-el--fourth"></div>
+            <div class="grid-el grid-el--fifth"></div>
             <div class="grid-el grid-el--sixth">
                 <div class="grid-el__label grid-el__label--left">
                     <div class="grid-el__label__upper-triangle grid-el__label__upper-triangle--green"></div>
