--- a/page-four.html
+++ b/page-four.html
@@ -25,24 +25,22 @@
         </header>
         
         <main class="grid grid--fullpage grid--three-by-two">
-            <div class="grid-el grid-el--david">
+            <div class="grid-el grid-el--matt">
             </div>
             <div class="grid-el grid-el--second">
                 <div class="grid-el__label grid-el__label--left">
                     <div class="grid-el__label__upper-triangle grid-el__label__upper-triangle--green"></div>
                     <div class="grid-el__label__lower-triangle grid-el__label__lower-triangle--green"></div> 
                     <span class="grid-el__label__textbox">
-                        COACH DAVID
+                        COACH MATT
                     </span>
                 </div>
                 <div class="grid-el__text">
-                    David Pérez is the founder and head coach at TAC. As the “architect,” he trains every coach for at least
-                    100 hours in TAC’s strategies, methods, and philoso phy before assigning coaches to students. As the head
-                    coach, David meets with students, TAC families for initial consultations, and is constantly developing
-                    new material to keep TAC at the forefront of innovative and efficient test prep and
-                    academic coaching. David also participates in detailed planning of every session for
-                    all students, providing an individualized, long-term plan
-                    for test-day success.
+                    Matt hails from Virginia, where he received his BS in Chemical Engineering at Virginia Tech. He then moved to Raleigh 
+                    and recently acquired his Masters in Chemical Engineering from NC State, with a focus on biomolecular engineering and 
+                    microbiology. Matt brings valuable experience to the TAC team, including teaching as a TA in grad school, tutoring ACT/SAT 
+                    students through high school and college, and interning at both NASA and DuPont. As a coach, he loves to share his 
+                    passion for learning, especially when it comes to math and science, with TAC students.
                 </div>
             </div>
             <div class="grid-el grid-el--third">
@@ -50,35 +48,34 @@
                     <div class="grid-el__label__upper-triangle grid-el__label__upper-triangle--green"></div>
                     <div class="grid-el__label__lower-triangle grid-el__label__lower-triangle--green"></div> 
                     <span class="grid-el__label__textbox">
-                        COACH CHANCE
+                        COACH ANGELA
                     </span>
                 </div>
                 <div class="grid-el__text">
-                    Chancellor is one of TAC’s most devoted coaches, having taken the official ACT test 9 times! His persistence paid off when 
-                    he raised his scorefrom a 25 on his first test to a 35 on the final test. His personal experience overcoming testing challenges 
-                    will prove invaluable to TAC students. Chancellor 
-                    received his BA summa cum laude in Religious Studies from Oklahoma Baptist University and moved to the Raleigh area to pursue 
-                    his Masters & PHD in Divinity from Southeastern. Chancellor is also an experienced academic coach, as he tutored classmates in english, 
-                    writing, science, and math courses throughout college and beyond. 
+                    Angela is a recent graduate of UNC-Chapel Hill, where she majored in Biology and minored in Medical Anthropology and Korean. 
+                    She’s been developing her passion for teaching since high school, where she taught high school math and science to her peers. 
+                    At Enloe High School in Raleigh, she received her IB diploma and scored an almost perfect 35 on her ACT! While at UNC, she was 
+                    a peer tutor for many STEM subjects, including Biology, Chemistry, and Physics. When Angela is not meeting with her students, 
+                    you can find her in the library studying for the DAT in order to pursue a dental career. 
                 </div>
             </div>
-            <div class="grid-el grid-el--chance"></div>
-            <div class="grid-el grid-el--dan"></div>
+            <div class="grid-el grid-el--angela"></div>
+            <div class="grid-el grid-el--cokie"></div>
             <div class="grid-el grid-el--sixth">
                 <div class="grid-el__label grid-el__label--left">
                     <div class="grid-el__label__upper-triangle grid-el__label__upper-triangle--green"></div>
                     <div class="grid-el__label__lower-triangle grid-el__label__lower-triangle--green"></div> 
                     <span class="grid-el__label__textbox">
-                        COACH DAN
+                        COACH COKIE
                     </span>
                 </div>
                 <div class="grid-el__text">
-                    Dan is a Wake Forest native who graduated from NC State with a B.A. in Public and Interpersonal Communication. 
-                    Dan has always had an affinity for academic coaching, as he spent much of his time tutoring local middle and 
-                    high school students in a wide range of academic subjects, including AP English & Calculus. Nowadays, Dan’s favorite 
-                    academic subject to teach is college test prep as he is inspired by seeing his students produce tremendous score improvement 
-                    and achieve their goals. In his spare time, he is constructing a high school level Intro to Communication curriculum that 
-                    he hopes to get implemented by local school districts in the near future.
+                    Cokie is a NC native who graduated from Duke University with a BA in Sociology and a minor in Biology. 
+                    Cokie has been dedicated to the academic success of those around her for years. From helping 
+                    younger family members with homework to tutoring high school students throughout her college career, she has developed a 
+                    passion for helping kids grow and succeed in their academic endeavors. While at Duke, Cokie volunteered her time at 
+                    CHANCE tutoring where she prepared underprivileged high school students for college by assisting them with academic 
+                    coaching, ACT/SAT prep and college application matching and selection. 
                 </div>
             </div>
         </main>
