--- a/page-three.html
+++ b/page-three.html
@@ -25,24 +25,22 @@
         </header>
         
         <main class="grid grid--fullpage grid--three-by-two">
-            <div class="grid-el grid-el--david">
+            <div class="grid-el grid-el--kayla">
             </div>
             <div class="grid-el grid-el--second">
                 <div class="grid-el__label grid-el__label--left">
                     <div class="grid-el__label__upper-triangle grid-el__label__upper-triangle--green"></div>
                     <div class="grid-el__label__lower-triangle grid-el__label__lower-triangle--green"></div> 
                     <span class="grid-el__label__textbox">
-                        COACH DAVID
+                        COACH KAYLA
                     </span>
                 </div>
                 <div class="grid-el__text">
-                    David Pérez is the founder and head coach at TAC. As the “architect,” he trains every coach for at least
-                    100 hours in TAC’s strategies, methods, and philoso phy before assigning coaches to students. As the head
-                    coach, David meets with students, TAC families for initial consultations, and is constantly developing
-                    new material to keep TAC at the forefront of innovative and efficient test prep and
-                    academic coaching. David also participates in detailed planning of every session for
-                    all students, providing an individualized, long-term plan
-                    for test-day success.
+                    Coach Kayla is a graduate of UNC-Wilmington, where she received a Bachelors of Fine Arts in Creative Writing cum laude 
+                    and a minor in English. Kayla has tutored her peers and classmates for several years in subjects ranging from 
+                    AP Calculus to ACT prep. She looks forward to applying the writing strategies she has developed to 
+                    coaching and mentoring students pursuing excellence in their writing assignments, especially on college admission essays. 
+                    She also hopes to begin pursuing a Master’s degree in Young Adult Fiction Writing in the near future. 
                 </div>
             </div>
             <div class="grid-el grid-el--third">
@@ -50,35 +48,33 @@
                     <div class="grid-el__label__upper-triangle grid-el__label__upper-triangle--green"></div>
                     <div class="grid-el__label__lower-triangle grid-el__label__lower-triangle--green"></div> 
                     <span class="grid-el__label__textbox">
-                        COACH CHANCE
+                        COACH THOMAS
                     </span>
                 </div>
                 <div class="grid-el__text">
-                    Chancellor is one of TAC’s most devoted coaches, having taken the official ACT test 9 times! His persistence paid off when 
-                    he raised his scorefrom a 25 on his first test to a 35 on the final test. His personal experience overcoming testing challenges 
-                    will prove invaluable to TAC students. Chancellor 
-                    received his BA summa cum laude in Religious Studies from Oklahoma Baptist University and moved to the Raleigh area to pursue 
-                    his Masters & PHD in Divinity from Southeastern. Chancellor is also an experienced academic coach, as he tutored classmates in english, 
-                    writing, science, and math courses throughout college and beyond. 
+                    Thomas is a Chapel Hill native who graduated from Tufts University, where he received a Bachelor of Arts in English and 
+                    Literature cum laude. His eclectic academic background has allowed Thomas to tutor grade school, high school, and college 
+                    students for several years in various subjects, including upper-level math, English literature and writing, and history. He 
+                    also has experience tutoring for several standardized tests including ISEE, SSAT, SAT, ACT, GMAT, and LSAT, the latter two 
+                    of which he took himself after college, scoring in the 98th and 97th percentile, respectively.
                 </div>
             </div>
-            <div class="grid-el grid-el--chance"></div>
-            <div class="grid-el grid-el--dan"></div>
+            <div class="grid-el grid-el--thomas"></div>
+            <div class="grid-el grid-el--greg"></div>
             <div class="grid-el grid-el--sixth">
                 <div class="grid-el__label grid-el__label--left">
                     <div class="grid-el__label__upper-triangle grid-el__label__upper-triangle--green"></div>
                     <div class="grid-el__label__lower-triangle grid-el__label__lower-triangle--green"></div> 
                     <span class="grid-el__label__textbox">
-                        COACH DAN
+                        COACH GREG
                     </span>
                 </div>
                 <div class="grid-el__text">
-                    Dan is a Wake Forest native who graduated from NC State with a B.A. in Public and Interpersonal Communication. 
-                    Dan has always had an affinity for academic coaching, as he spent much of his time tutoring local middle and 
-                    high school students in a wide range of academic subjects, including AP English & Calculus. Nowadays, Dan’s favorite 
-                    academic subject to teach is college test prep as he is inspired by seeing his students produce tremendous score improvement 
-                    and achieve their goals. In his spare time, he is constructing a high school level Intro to Communication curriculum that 
-                    he hopes to get implemented by local school districts in the near future.
+                    Greg is currently a graduate student in the School of Counseling at NC State. Greg graduated from UNC Greensboro 
+                    in 2013 with a BA in Psychology and Biology and before college spent four years active duty as a US Marine. He is 
+                    looking forward to helping our high school students manage the demands of challenging schedules and standardized 
+                    testing by sharing his passion for Biology, Chemistry, Pre-calculus, and Statistics with eager and motivated students. 
+                    When not focused on work or school, Greg enjoys traveling abroad to experience new cultures, cuisines, and lifestyles.
                 </div>
             </div>
         </main>
