Updated page one layout

--- a/page-one.html
+++ b/page-one.html
@@ -18,15 +18,12 @@
         <header class="page-header page-header__large">
             <div class="page-header__upper-triangle page-header__upper-triangle--red"></div>
             <div class="page-header__lower-triangle page-header__lower-triangle--red"></div>
-            <div class="page-header__text-box page-header__text-box--first-page">
-                <h1 class="primary-header">
-                    <span class="primary-header--main">Triangle Academic Coach</span>
-                    <hr class="horizontal-hr horizontal-hr--thick" />
-                    <span class="primary-header--sub">Individualized test prep for students of all skill levels</span>
-                </h1>
+            <div>
+                NEWSLETTER
             </div>
         </header>
-        <section class="page-one">
+
+        <!-- <section class="page-one">
             <div class="page-one__round-portrait">
             </div>
             <article class="flex-container--inline flex-container--col main-article">
@@ -87,7 +84,7 @@
                 </div>
                 
             </ul>
-        </section>
+        </section> -->
 
         <!-- <section class="grid-test">
             <div class="row">
