Emergency commit to save files while cleaning hard drive

--- a/page-one.html
+++ b/page-one.html
@@ -18,10 +18,12 @@
         <header class="page-header page-header__large">
             <div class="page-header__upper-triangle page-header__upper-triangle--red"></div>
             <div class="page-header__lower-triangle page-header__lower-triangle--red"></div>
-            <div>
-                NEWSLETTER
-            </div>
         </header>
+        <div class="flex-container--block flex-container--col">
+            <div class="rect-title rect-title__home-title">
+                Newsletter
+            </div>
+        </div>
 
         <!-- <section class="page-one">
             <div class="page-one__round-portrait">
