Continued tweaking format of page one

--- a/page-one.html
+++ b/page-one.html
@@ -15,112 +15,22 @@
 
     </head>
     <body>
-        <header class="page-header page-header__large">
-            <div class="page-header__upper-triangle page-header__upper-triangle--red"></div>
-            <div class="page-header__lower-triangle page-header__lower-triangle--red"></div>
-        </header>
-        <div class="flex-container--block flex-container--col">
+        <div>
+            <header class="page-header page-header__large">
+            </header>
+        </div>
+        <div class="flex-container--inline flex-container--col">
+            <div class=rect-title__superheading>
+                Spring | 2019
+            </div>
             <div class="rect-title rect-title__home-title">
                 Newsletter
             </div>
+            <div class="rect-title__subheading">
+                <img class="rect-title__subheading--img" src="./assets/photographs/tac-logo.svg"/>
+                <span class="rect-title__subheading--text">Triangle Academic Coach</span>
+            </div>
         </div>
-
-        <!-- <section class="page-one">
-            <div class="page-one__round-portrait">
-            </div>
-            <article class="flex-container--inline flex-container--col main-article">
-                <h1 class="main-heading">
-                    <i class="icon-basic-elaboration-message-plus main-heading__icon"></i> 
-                    <span class="main-heading__text">From the Desk of David Pérez</span>
-                </h1>
-                <div class="flex-container--inline flex-container--row article-body">
-                    <p class="article-body__paragraph article-body__paragraph--first">
-                        What an exciting year 2018 has been for our students! While the calendar year is winding down and 
-                        Winter Break is fast approaching, students at TAC are still working hard with important benchmarks 
-                        on the horizon. For younger students, this means working on organizational skills and core subject 
-                        areas that will be vital for success in later grades, as well as preparing for ISEE and SSAT for
-                        those who wish to attend prep school. For high schoolers, it means focusing both on academic coaching 
-                        for tough AP courses, which prepare for the rigor of college, and on the ACT and SAT. And for college 
-                        students, it means preparing for the 
-                    </p>
-                    <p class="article-body__paragraph article-body__paragraph--second">
-                        self-teaching necessary to thrive in an increasingly tough 
-                        university environment in addition to LSAT, GRE, and GMAT prep for those whose goals involve graduate school.
-                        For high schoolers, determining the optimal testing timeline for the ACT/SAT, 
-                        is one of one of our most important objectives. All too often students (and their parents) 
-                        are advised to delay testing until the later stages of Junior year. This standard but outdated 
-                        recommendation only makes sense for a small segment of students who are struggling to keep up 
-                        academically. In reality, most students are primed to achieve desired ACT/SAT test scores Sophomore year.   
-                    </p>
-                </div>
-            </article>
-        </section>
-        <section class="aside aside--short aside--dark-yellow">
-            <h2 class="secondary-header">
-                    <span class="icon-basic-elaboration-mail-download secondary-header__icon"></span> 
-                    <span class="secondary-header__text">Inside this Issue</span>
-            </h2>
-            <hr class="horizontal-hr horizontal-hr--thin" />
-            <ul class="aside__ul">
-                <div class="flex-container--block flex-container--col">
-                    <li class="flex-container--inline flex-container--row flex-container--space-between">
-                        <span>Information for 11th Graders</span>
-                        <span>3</span>
-                    </li>
-                    <li class="flex-container--inline flex-container--row flex-container--space-between">
-                        <span>Information for 11th Graders</span>
-                        <span>3</span>
-                    </li>
-                    <li class="flex-container--inline flex-container--row flex-container--space-between">
-                        <span>Information for 11th Graders</span>
-                        <span>3</span>
-                    </li>
-                    <li class="flex-container--inline flex-container--row flex-container--space-between">
-                        <span>Information for 11th Graders</span>
-                        <span>3</span>
-                    </li>
-                    <li class="flex-container--inline flex-container--row flex-container--space-between">
-                        <span>Information for 11th Graders</span>
-                        <span>3</span>
-                    </li>
-                </div>
-                
-            </ul>
-        </section> -->
-
-        <!-- <section class="grid-test">
-            <div class="row">
-                <div class="col-1-of-2">Col 1 of 2</div>
-                <div class="col-1-of-2">Col 1 of 2</div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">Col 1 of 3</div>
-                <div class="col-1-of-3">Col 1 of 3</div>
-                <div class="col-1-of-3">Col 1 of 3</div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">Col 1 of 3</div>
-                <div class="col-2-of-3">Col 2 of 3</div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">Col 1 of 4</div>
-                <div class="col-1-of-4">Col 1 of 4</div>
-                <div class="col-1-of-4">Col 1 of 4</div>
-                <div class="col-1-of-4">Col 1 of 4</div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">Col 1 of 4</div>
-                <div class="col-1-of-4">Col 1 of 4</div>
-                <div class="col-2-of-4">Col 2 of 4</div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">Col 1 of 4</div>
-                <div class="col-3-of-4">Col 3 of 4</div>
-            </div>
-        </section> -->
-
-        
-
         <footer class="page-footer">
             <div class="bottom-border bottom-border--red"></div>
         </footer>
